--- a/ranks.html
+++ b/ranks.html
@@ -8,9 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Ranks</title>
-    <link rel="icon" type="image/x-icon" href="images/favicon.png" />
-    <link rel="stylesheet" href="style_ranks.css" />
-    <link rel="stylesheet" href="style_general.css" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.png" />
+    <link rel="stylesheet" href="/style_ranks.css" />
+    <link rel="stylesheet" href="/style_general.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,13 +22,13 @@
     <nav class="navbar">
       <ul>
         <li id="home">
-          <a href="./index.html">Home</a>
+          <a href="/index.html">Home</a>
         </li>
-        <li class="active"><a href="./ranks.html">Ranks</a></li>
-        <li><a href="./heroes.html">Heroes</a></li>
-        <li><a href="./roles.html">Roles</a></li>
-        <li><a href="./battlefeild.html">Battlefield</a></li>
-        <li><a href="./modes.html">Modes</a></li>
+        <li class="active"><a href="/ranks.html">Ranks</a></li>
+        <li><a href="/heroes.html">Heroes</a></li>
+        <li><a href="/roles.html">Roles</a></li>
+        <li><a href="/battlefeild.html">Battlefield</a></li>
+        <li><a href="/modes.html">Modes</a></li>
       </ul>
     </nav>
     <!-- navbar -->
@@ -37,51 +37,51 @@
       <div id="new">
         <img
           class="icon"
-          src="images/Rank/New/warrior_new.png"
+          src="/images/Rank/New/warrior_new.png"
           alt="Warrior"
         />
 
-        <img class="star" src="images/Rank/point.png" alt="*" />
+        <img class="star" src="/images/Rank/point.png" alt="*" />
 
-        <img class="icon" src="images/Rank/New/elite_new.png" alt="Elite" />
-        <img class="star" src="images/Rank/point.png" alt="*" />
+        <img class="icon" src="/images/Rank/New/elite_new.png" alt="Elite" />
+        <img class="star" src="/images/Rank/point.png" alt="*" />
 
-        <img class="icon" src="images/Rank/New/master_new.png" alt="Master" />
-        <img class="star" src="images/Rank/point.png" alt="*" />
+        <img class="icon" src="/images/Rank/New/master_new.png" alt="Master" />
+        <img class="star" src="/images/Rank/point.png" alt="*" />
 
         <img
           class="icon"
-          src="images/Rank/New/grandmaster_new.png"
+          src="/images/Rank/New/grandmaster_new.png"
           alt="Grandmaster"
         />
-        <img class="star" src="images/Rank/point.png" alt="*" />
+        <img class="star" src="/images/Rank/point.png" alt="*" />
 
-        <img class="icon" src="images/Rank/New/epic_new.png" alt="Epic" />
-        <img class="star" src="images/Rank/point.png" alt="*" />
+        <img class="icon" src="/images/Rank/New/epic_new.png" alt="Epic" />
+        <img class="star" src="/images/Rank/point.png" alt="*" />
 
-        <img class="icon" src="images/Rank/New/legend_new.png" alt="Legeng" />
-        <img class="star" src="images/Rank/point.png" alt="*" />
+        <img class="icon" src="/images/Rank/New/legend_new.png" alt="Legeng" />
+        <img class="star" src="/images/Rank/point.png" alt="*" />
 
-        <img class="icon" src="images/Rank/New/mythic_new.png" alt="Mythic" />
-        <img class="star" src="images/Rank/point.png" alt="*" />
+        <img class="icon" src="/images/Rank/New/mythic_new.png" alt="Mythic" />
+        <img class="star" src="/images/Rank/point.png" alt="*" />
 
         <img
           class="icon"
-          src="images/Rank/New/honor_new.png"
+          src="/images/Rank/New/honor_new.png"
           alt="Mythical Honor"
         />
-        <img class="star" src="images/Rank/point.png" alt="*" />
+        <img class="star" src="/images/Rank/point.png" alt="*" />
 
         <img
           class="icon"
-          src="images/Rank/New/glory_new.png"
+          src="/images/Rank/New/glory_new.png"
           alt="Mythical Glory"
         />
-        <img class="star" src="images/Rank/point.png" alt="*" />
+        <img class="star" src="/images/Rank/point.png" alt="*" />
 
         <img
           class="icon"
-          src="images/Rank/New/immortal_new.png"
+          src="/images/Rank/New/immortal_new.png"
           alt="Mythical Immortal"
         />
         <p>Warrior III-I</p>
@@ -109,51 +109,51 @@
       <div id="old">
         <img
           class="icon"
-          src="images/Rank/Old/warrior_old.webp"
+          src="/images/Rank/Old/warrior_old.webp"
           alt="Warrior"
         />
 
-        <img class="star" src="images/Rank/point.png" alt="*" />
+        <img class="star" src="/images/Rank/point.png" alt="*" />
 
-        <img class="icon" src="images/Rank/Old/elite.webp" alt="Elite" />
-        <img class="star" src="images/Rank/point.png" alt="*" />
+        <img class="icon" src="/images/Rank/Old/elite.webp" alt="Elite" />
+        <img class="star" src="/images/Rank/point.png" alt="*" />
 
-        <img class="icon" src="images/Rank/Old/master_old.webp" alt="Master" />
-        <img class="star" src="images/Rank/point.png" alt="*" />
+        <img class="icon" src="/images/Rank/Old/master_old.webp" alt="Master" />
+        <img class="star" src="/images/Rank/point.png" alt="*" />
 
         <img
           class="icon"
-          src="images/Rank/Old/grandmaster_old.webp"
+          src="/images/Rank/Old/grandmaster_old.webp"
           alt="Grandmaster"
         />
-        <img class="star" src="images/Rank/point.png" alt="*" />
+        <img class="star" src="/images/Rank/point.png" alt="*" />
 
-        <img class="icon" src="images/Rank/Old/epic_old.webp" alt="Epic" />
-        <img class="star" src="images/Rank/point.png" alt="*" />
+        <img class="icon" src="/images/Rank/Old/epic_old.webp" alt="Epic" />
+        <img class="star" src="/images/Rank/point.png" alt="*" />
 
-        <img class="icon" src="images/Rank/Old/legend_old.webp" alt="Legeng" />
-        <img class="star" src="images/Rank/point.png" alt="*" />
+        <img class="icon" src="/images/Rank/Old/legend_old.webp" alt="Legeng" />
+        <img class="star" src="/images/Rank/point.png" alt="*" />
 
-        <img class="icon" src="images/Rank/Old/mythic.webp" alt="Mythic" />
-        <img class="star" src="images/Rank/point.png" alt="*" />
+        <img class="icon" src="/images/Rank/Old/mythic.webp" alt="Mythic" />
+        <img class="star" src="/images/Rank/point.png" alt="*" />
 
         <img
           class="icon"
-          src="images/Rank/Old/honor_old.webp"
+          src="/images/Rank/Old/honor_old.webp"
           alt="Mythical Honor"
         />
-        <img class="star" src="images/Rank/point.png" alt="*" />
+        <img class="star" src="/images/Rank/point.png" alt="*" />
 
         <img
           class="icon"
-          src="images/Rank/Old/glory_old.webp"
+          src="/images/Rank/Old/glory_old.webp"
           alt="Mythical Glory"
         />
-        <img class="star" src="images/Rank/point.png" alt="*" />
+        <img class="star" src="/images/Rank/point.png" alt="*" />
 
         <img
           class="icon"
-          src="images/Rank/Old/immortal_old.webp"
+          src="/images/Rank/Old/immortal_old.webp"
           alt="Mythical Immortal"
         />
         <p>Warrior III-I</p>
@@ -178,7 +178,7 @@
       </div>
       <!-- old -->
       <div id="form">
-        <h2>Welcome to MLBB!</h2>
+        <h2>Welcome to Mobile Legends!</h2>
         <h3>Your start rank is Warrior III</h3>
 
         <form id="mlbbForm">
@@ -192,110 +192,12 @@
             Calculate Rank
           </button>
           <br />
-          <label for="currentRank">Your current rank:</label>
+          <label for="output">Your current rank:</label>
           <output id="output"></output>
         </form>
-
-        <script>
-          document.addEventListener("DOMContentLoaded", function () {
-            const gamesPlayedInput = document.getElementById("gamesPlayed");
-            const gamesWonInput = document.getElementById("gamesWon");
-
-            gamesPlayedInput.addEventListener("input", function () {
-              this.value = this.value.replace(/[^0-9]/g, "");
-            });
-
-            gamesWonInput.addEventListener("input", function () {
-              this.value = this.value.replace(/[^0-9]/g, "");
-            });
-          });
-          function calculateRank() {
-            const gamesPlayedInput = document.getElementById("gamesPlayed");
-            const gamesWonInput = document.getElementById("gamesWon");
-            const outputElement = document.getElementById("output");
-
-            // Get values from input fields
-            const gamesPlayed = parseInt(gamesPlayedInput.value);
-            const gamesWon = parseInt(gamesWonInput.value);
-
-            // Validate inputs
-            if (
-              isNaN(gamesPlayed) ||
-              isNaN(gamesWon) ||
-              gamesWon > gamesPlayed
-            ) {
-              alert("Invalid input. Please enter valid numbers.");
-              return;
-            }
-
-            // Calculate star
-            let star = gamesWon - (gamesPlayed - gamesWon);
-
-            // Determine rank based on star
-            let rank;
-            if (star <= 3) {
-              rank = "Warrior III";
-            } else if (star >= 4 && star <= 6) {
-              rank = "Warrior II";
-            } else if (star >= 7 && star <= 9) {
-              rank = "Warrior I";
-            } else if (star >= 10 && star <= 13) {
-              rank = "Elite III";
-            } else if (star >= 14 && star <= 17) {
-              rank = "Elite II";
-            } else if (star >= 18 && star <= 21) {
-              rank = "Elite I";
-            } else if (star >= 22 && star <= 25) {
-              rank = "Master IV";
-            } else if (star >= 26 && star <= 29) {
-              rank = "Master III";
-            } else if (star >= 30 && star <= 33) {
-              rank = "Master II";
-            } else if (star >= 34 && star <= 37) {
-              rank = "Master I";
-            } else if (star >= 38 && star <= 42) {
-              rank = "Grandmaster V";
-            } else if (star >= 43 && star <= 47) {
-              rank = "Grandmaster IV";
-            } else if (star >= 48 && star <= 52) {
-              rank = "Grandmaster III";
-            } else if (star >= 53 && star <= 57) {
-              rank = "Grandmaster II";
-            } else if (star >= 58 && star <= 62) {
-              rank = "Grandmaster I";
-            } else if (star >= 63 && star <= 67) {
-              rank = "Epic V";
-            } else if (star >= 68 && star <= 72) {
-              rank = "Epic IV";
-            } else if (star >= 73 && star <= 77) {
-              rank = "Epic III";
-            } else if (star >= 78 && star <= 82) {
-              rank = "Epic II";
-            } else if (star >= 83 && star <= 87) {
-              rank = "Epic I";
-            } else if (star >= 88 && star <= 92) {
-              rank = "Legend V";
-            } else if (star >= 93 && star <= 97) {
-              rank = "Legend IV";
-            } else if (star >= 98 && star <= 102) {
-              rank = "Legend III";
-            } else if (star >= 103 && star <= 107) {
-              rank = "Legend II";
-            } else if (star >= 108 && star <= 112) {
-              rank = "Legend I";
-            } else if (star >= 113 && star <= 136) {
-              rank = "Mythic";
-            } else if (star >= 137 && star <= 159) {
-              rank = "Mythical Honor";
-            } else if (star >= 160 && star <= 208) {
-              rank = "Mythical Glory";
-            } else {
-              rank = "Mythical Immortal";
-            }
-
-            outputElement.textContent = rank;
-          }
-        </script>
+      </div>
+      <div id="animation">
+        <canvas id="myCanvas"></canvas>
       </div>
     </div>
 
