--- a/heroes.html
+++ b/heroes.html
@@ -10,8 +10,8 @@
 
     <title>Heroes</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.png" />
-    <link rel="stylesheet" href="/style_heroes.css" />
-    <link rel="stylesheet" href="/style_general.css" />
+    <link rel="stylesheet" href="style_heroes.css" />
+    <link rel="stylesheet" href="style_general.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -23,13 +23,13 @@
     <nav class="navbar">
       <ul>
         <li id="home">
-          <a href="/index.html">Home</a>
+          <a href="./index.html">Home</a>
         </li>
-        <li><a href="/ranks.html">Ranks</a></li>
-        <li class="active"><a href="/heroes.html">Heroes</a></li>
-        <li><a href="/roles.html">Roles</a></li>
-        <li><a href="/battlefeild.html">Battlefield</a></li>
-        <li><a href="/modes.html">Modes</a></li>
+        <li><a href="./ranks.html">Ranks</a></li>
+        <li class="active"><a href="./heroes.html">Heroes</a></li>
+        <li><a href="./roles.html">Roles</a></li>
+        <li><a href="./battlefeild.html">Battlefield</a></li>
+        <li><a href="./modes.html">Modes</a></li>
       </ul>
     </nav>
     <!-- navbar -->
@@ -50,7 +50,7 @@
           <div class="slideshow-container">
             <div class="mySlides1 fade">
               <img
-                src="/images/Heroes/Tank/tigreal.jpg"
+                src="images/Heroes/Tank/tigreal.jpg"
                 alt="Tigreal"
                 style="width: 100%"
               />
@@ -59,7 +59,7 @@
 
             <div class="mySlides1 fade">
               <img
-                src="/images/Heroes/Tank/franco.jpg"
+                src="images/Heroes/Tank/franco.jpg"
                 alt="Franko"
                 style="width: 100%"
               />
@@ -68,7 +68,7 @@
 
             <div class="mySlides1 fade">
               <img
-                src="/images/Heroes/Tank/akai.jpg"
+                src="images/Heroes/Tank/akai.jpg"
                 alt="Akai"
                 style="width: 100%"
               />
@@ -77,7 +77,7 @@
 
             <div class="mySlides1 fade">
               <img
-                src="/images/Heroes/Tank/alice.jpg"
+                src="images/Heroes/Tank/alice.jpg"
                 alt="Alice"
                 style="width: 100%"
               />
@@ -86,7 +86,7 @@
 
             <div class="mySlides1 fade">
               <img
-                src="/images/Heroes/Tank/khufra.jpg"
+                src="images/Heroes/Tank/khufra.jpg"
                 alt="Khufra"
                 style="width: 100%"
               />
@@ -95,7 +95,7 @@
 
             <div class="mySlides1 fade">
               <img
-                src="/images/Heroes/Tank/lolita.jpg"
+                src="images/Heroes/Tank/lolita.jpg"
                 alt="Lolita"
                 style="width: 100%"
               />
@@ -111,7 +111,7 @@
           <div class="slideshow-container">
             <div class="mySlides2 fade">
               <img
-                src="/images/Heroes/Fighter/dyrroth.jpg"
+                src="images/Heroes/Fighter/dyrroth.jpg"
                 alt="Dyrroth"
                 style="width: 100%"
               />
@@ -120,7 +120,7 @@
 
             <div class="mySlides2 fade">
               <img
-                src="/images/Heroes/Fighter/freya.jpg"
+                src="images/Heroes/Fighter/freya.jpg"
                 alt="Freya"
                 style="width: 100%"
               />
@@ -129,7 +129,7 @@
 
             <div class="mySlides2 fade">
               <img
-                src="/images/Heroes/Fighter/alucard.jpg"
+                src="images/Heroes/Fighter/alucard.jpg"
                 alt="Alucard"
                 style="width: 100%"
               />
@@ -138,7 +138,7 @@
 
             <div class="mySlides2 fade">
               <img
-                src="/images/Heroes/Fighter/martis.jpg"
+                src="images/Heroes/Fighter/martis.jpg"
                 alt="Martis"
                 style="width: 100%"
               />
@@ -147,7 +147,7 @@
 
             <div class="mySlides2 fade">
               <img
-                src="/images/Heroes/Fighter/guinevere.jpg"
+                src="images/Heroes/Fighter/guinevere.jpg"
                 alt="Guinevere"
                 style="width: 100%"
               />
@@ -156,7 +156,7 @@
 
             <div class="mySlides2 fade">
               <img
-                src="/images/Heroes/Fighter/ruby.jpg"
+                src="images/Heroes/Fighter/ruby.jpg"
                 alt="Ruby"
                 style="width: 100%"
               />
@@ -173,7 +173,7 @@
           <div class="slideshow-container">
             <div class="mySlides3 fade">
               <img
-                src="/images/Heroes/Assassin/fanny.jpg"
+                src="images/Heroes/Assassin/fanny.jpg"
                 alt="Fanny"
                 style="width: 100%"
               />
@@ -182,7 +182,7 @@
 
             <div class="mySlides3 fade">
               <img
-                src="/images/Heroes/Assassin/benedetta.jpg"
+                src="images/Heroes/Assassin/benedetta.jpg"
                 alt="Benedetta"
                 style="width: 100%"
               />
@@ -191,7 +191,7 @@
 
             <div class="mySlides3 fade">
               <img
-                src="/images/Heroes/Assassin/hayabusa.jpg"
+                src="images/Heroes/Assassin/hayabusa.jpg"
                 alt="Hayabusa"
                 style="width: 100%"
               />
@@ -200,7 +200,7 @@
 
             <div class="mySlides3 fade">
               <img
-                src="/images/Heroes/Assassin/ling.jpg"
+                src="images/Heroes/Assassin/ling.jpg"
                 alt="Ling"
                 style="width: 100%"
               />
@@ -209,7 +209,7 @@
 
             <div class="mySlides3 fade">
               <img
-                src="/images/Heroes/Assassin/gusion.jpg"
+                src="images/Heroes/Assassin/gusion.jpg"
                 alt="Gusion"
                 style="width: 100%"
               />
@@ -225,7 +225,7 @@
           <div class="slideshow-container">
             <div class="mySlides4 fade">
               <img
-                src="/images/Heroes/MM/layla.jpg"
+                src="images/Heroes/MM/layla.jpg"
                 alt="Layla"
                 style="width: 100%"
               />
@@ -234,7 +234,7 @@
 
             <div class="mySlides4 fade">
               <img
-                src="/images/Heroes/MM/claude.jpg"
+                src="images/Heroes/MM/claude.jpg"
                 alt="Claude"
                 style="width: 100%"
               />
@@ -243,7 +243,7 @@
 
             <div class="mySlides4 fade">
               <img
-                src="/images/Heroes/MM/wanwan.jpg"
+                src="images/Heroes/MM/wanwan.jpg"
                 alt="Wanwan"
                 style="width: 100%"
               />
@@ -252,7 +252,7 @@
 
             <div class="mySlides4 fade">
               <img
-                src="/images/Heroes/MM/hanabi.jpg"
+                src="images/Heroes/MM/hanabi.jpg"
                 alt="Hanabi"
                 style="width: 100%"
               />
@@ -261,7 +261,7 @@
 
             <div class="mySlides4 fade">
               <img
-                src="/images/Heroes/MM/brody.jpg"
+                src="images/Heroes/MM/brody.jpg"
                 alt="Brody"
                 style="width: 100%"
               />
@@ -278,7 +278,7 @@
           <div class="slideshow-container">
             <div class="mySlides5 fade">
               <img
-                src="/images/Heroes/Mage/lunox.jpg"
+                src="images/Heroes/Mage/lunox.jpg"
                 alt="Lunox"
                 style="width: 100%"
               />
@@ -287,7 +287,7 @@
 
             <div class="mySlides5 fade">
               <img
-                src="/images/Heroes/Mage/vale.jpg"
+                src="images/Heroes/Mage/vale.jpg"
                 alt="Vale"
                 style="width: 100%"
               />
@@ -296,7 +296,7 @@
 
             <div class="mySlides5 fade">
               <img
-                src="/images/Heroes/Mage/valir.jpg"
+                src="images/Heroes/Mage/valir.jpg"
                 alt="Valir"
                 style="width: 100%"
               />
@@ -314,7 +314,7 @@
 
             <div class="mySlides5 fade">
               <img
-                src="/images/Heroes/Mage/nana.jpg"
+                src="images/Heroes/Mage/nana.jpg"
                 alt="Nana"
                 style="width: 100%"
               />
@@ -331,7 +331,7 @@
           <div class="slideshow-container">
             <div class="mySlides6 fade">
               <img
-                src="/images/Heroes/Supp/mathilda.jpg"
+                src="images/Heroes/Supp/mathilda.jpg"
                 alt="Mathilda"
                 style="width: 100%"
               />
@@ -340,7 +340,7 @@
 
             <div class="mySlides6 fade">
               <img
-                src="/images/Heroes/Supp/diggie.jpg"
+                src="images/Heroes/Supp/diggie.jpg"
                 alt="Diggie"
                 style="width: 100%"
               />
@@ -349,7 +349,7 @@
 
             <div class="mySlides6 fade">
               <img
-                src="/images/Heroes/Supp/floryn.jpg"
+                src="images/Heroes/Supp/floryn.jpg"
                 alt="Floryn"
                 style="width: 100%"
               />
@@ -358,7 +358,7 @@
 
             <div class="mySlides6 fade">
               <img
-                src="/images/Heroes/Supp/estes.jpg"
+                src="images/Heroes/Supp/estes.jpg"
                 alt="Estes"
                 style="width: 100%"
               />
